[package]
name = "tull-rust"
authors = ["Sachin Kukreja <sk364@gmail.com>"]
description = "Teleport Your Logs with Love"
version = "0.2.0"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sk364/tull-rust"
repository = "https://github.com/sk364/tull-rust"
keywords = ["cli", "terminal"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
structopt = "0.3.13"
home = "0.5.3"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
subprocess = "0.2.7"
serde_derive = "1.0"
serde = "1.0"
handlebars = "4.1.0"
serde_json = "1.0.59"
reqwest = { version = "0.11.4", features = ["blocking"] }
